--- a/templates/home.html
+++ b/templates/home.html
@@ -75,7 +75,7 @@
             </p>
             <div class="flex-container">
                 <button id="answer-btn" href="answers.html">Answer</button>
-                <button id="answer-btn" href="questions.html">View more answers</button>
+                <button id="" href="questions.html">View more answers</button>
             </div>
         </div>
     </div>
