--- a/static/questions.css
+++ b/static/questions.css
@@ -22,16 +22,15 @@ body {
     height: 20px;
 }
 
-.nav-stack {
+/* .nav-stack {
     display: block;
-    /* padding: 40px; */
     float: right;
     text-align: center;
     padding: 14px 17px;
     font-weight: bold;
     font-size: 15px;
     height: 20px;
-}
+} */
 
 .nav-bar a:hover {
     background-color: rgb(27, 48, 48);
@@ -49,10 +48,6 @@ body {
 a {
     text-decoration: none;
     color: #ffffff;
-}
-
-h3 a {
-    color: black;
 }
 
 button {
@@ -75,40 +70,53 @@ button:hover {
     transition: 0.7s;
 }
 
-label a {
-    text-decoration: none;
-    color: rgb(99, 201, 201);
+.content {
+    width: 600px;
+    margin-top: 40px;
+    margin: 0 auto;
 }
 
-p a {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    /* margin-bottom: 30px; */
+.flex-container {
+    margin-top: 40px;
+    width: 100%;
+}
+
+.flex-container>input {
+    padding: 18px;
+    width: 70%;
 }
 
 .question {
-    width: 500px;
-    background-color: rgb(151, 151, 151);
+    width: 100%;
+    background-color: rgb(126, 125, 125);
     height: 30%;
     margin-bottom: 60px;
 }
 
-.content {
-    width: 500px;
-    margin: 0 auto;
+a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+h2 a {
+    color: rgb(99, 201, 201);
+}
+
+#delete-btn {
+    background-color: darkred;
 }
 
 @media screen and (max-width: 600px) {
-    .question {
-        width: 450px;
-    }
     .content {
         width: 450px;
         margin: 0 auto;
     }
+    .question {
+        width: 450px;
+    }
 }
 
-@media screen and (max-width: 501px) {
+@media screen and (max-width: 622px) {
     .topnav a:not(:first-child) {
         display: none;
     }
@@ -156,16 +164,16 @@ p a {
     .content {
         width: 400px;
     }
+    .flex-container {
+        width: 100%;
+    }
+    .flex-container>input {
+        padding: 18px;
+        width: 70%;
+    }
     .question {
         width: 400px;
-        background-color: rgb(151, 151, 151);
-    }
-    .flex-container {
-        display: flex;
-        margin-left: 5%;
-    }
-    .flex-container>button {
-        margin-right: 5%;
+        background-color: rgb(126, 125, 125);
     }
 }
 
@@ -182,10 +190,6 @@ p a {
         float: none;
         display: block;
         text-align: left;
-    }
-    .container {
-        display: inline-block;
-        cursor: pointer;
     }
     .bar1,
     .bar2,
@@ -210,17 +214,18 @@ p a {
     .content {
         width: 350px;
     }
-    .question {
-        width: 350px;
-        background-color: rgb(151, 151, 151);
-    }
     button {
         width: 200px;
     }
     .flex-container {
-        display: flex;
+        width: 100%;
     }
-    .flex-container > button {
-        margin-right: 5%;
+    .flex-container>input {
+        padding: 18px;
+        width: 70%;
+    }
+    .question {
+        width: 350px;
+        background-color: rgb(126, 125, 125);
     }
 }
