--- a/static/home.css
+++ b/static/home.css
@@ -108,7 +108,7 @@ p a {
     }
 }
 
-@media screen and (max-width: 501px) {
+@media screen and (max-width: 622px) {
     .topnav a:not(:first-child) {
         display: none;
     }
@@ -128,10 +128,6 @@ p a {
         float: none;
         display: block;
         text-align: left;
-    }
-    .container {
-        display: inline-block;
-        cursor: pointer;
     }
     .bar1,
     .bar2,
@@ -164,8 +160,14 @@ p a {
         display: flex;
         margin-left: 5%;
     }
-    .flex-container>button {
+    .flex-container>a {
         margin-right: 5%;
+        width: 150px;
+        /* text-align: center; */
+    }
+    .flex-container button {
+        width: 150px;
+        margin-right: 10%;
     }
 }
 
@@ -182,10 +184,6 @@ p a {
         float: none;
         display: block;
         text-align: left;
-    }
-    .container {
-        display: inline-block;
-        cursor: pointer;
     }
     .bar1,
     .bar2,
@@ -220,7 +218,7 @@ p a {
     .flex-container {
         display: flex;
     }
-    .flex-container > button {
+    .flex-container > a {
         margin-right: 5%;
     }
 }
