Change link for answer button

--- a/templates/home.html
+++ b/templates/home.html
@@ -44,7 +44,7 @@
                 enough.
             </p>
             <div class="flex-container">
-                <a href="answers.html">
+                <a href="answer_question.html">
                     <button id="answer-btn">Answer</button>
                 </a>
                 <a href="more_answers.html">
@@ -66,10 +66,10 @@
                 <code>Ctrl + Shift + R</code>
             </p>
             <div class="flex-container">
-                <a href="answers.html">
+                <a href="answer_question.html">
                     <button id="answer-btn">Answer</button>
                 </a>
-                <a href="answers.html">
+                <a href="more_answers.html">
                     <button id="answer-btn">View more answers</button>
                 </a>
             </div>
@@ -77,7 +77,7 @@
         <div class="question">
             <label>
                 <h2>
-                    <a href="answers.html">How can I add a coveralls badge to my github repository?</a>
+                    <a href="more_answers.html">How can I add a coveralls badge to my github repository?</a>
                 </h2>
             </label>
             <p>I advise that you visit
@@ -85,10 +85,10 @@
                 enough.
             </p>
             <div class="flex-container">
-                <a href="answers.html">
+                <a href="answer_question.html">
                     <button id="answer-btn">Answer</button>
                 </a>
-                <a href="answers.html">
+                <a href="more_answers.html">
                     <button id="answer-btn">View more answers</button>
                 </a>
             </div>
