bg(User cannot view other navigation options)Fix wrong link to JS file. Commit to deliver a bug fix where user could not see other navigation options in mobile view and change background color. [Fixes #159873839]

--- a/static/answer_question.css
+++ b/static/answer_question.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f8f8f9;
+    background-color: #b8b8bb;
     font-family: ff-clan-web-pro, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 13px;
     text-align: center;
