--- a/static/profile.css
+++ b/static/profile.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f8f8f9;
+    background-color: #b8b8bb;
     font-family: ff-clan-web-pro, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 13px;
     text-align: center;
