--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/contact.css">
-    <script src="../JS/home.js"></script>
+    <script src="../scripts/home.js"></script>
     <title>StackOverflow-lite</title>
 </head>
 
