--- a/static/profile.css
+++ b/static/profile.css
@@ -61,13 +61,21 @@ h2 a {
 }
 
 .questions-asked {
-    border: 1px solid darkslategray;
+    border: 1px solid #fff;
     margin-top: 5%;
+    background-color: #ffffff;
+    border-radius: 15px;
+}
+
+p {
+    font-size: 20px;
 }
 
 .ans-given {
-    border: 1px solid darkslategray;
+    border: 1px solid #fff;
     margin-top: 5%;
+    background-color: #ffffff;
+    border-radius: 15px;
 }
 
 .wrap {
@@ -76,12 +84,18 @@ h2 a {
 }
 
 .wrap > .recent {
-    border: 1px solid darkslategray;
+    border: 1px solid #fff;
     margin-right: 5%;
+    border-radius: 15px;
+    background-color: rgb(206, 205, 205);
+    filter: drop-shadow(13px 10px 10px rgb(107, 106, 106));
 }
 
 .wrap > .top {
-    border: 1px solid darkslategray;
+    border: 1px solid #fff;
+    border-radius: 15px;
+    background-color: rgb(206, 205, 205);
+    filter: drop-shadow(13px 10px 10px rgb(107, 106, 106));
 }
 
 footer {
